--- a/WTP2024/appsettings.json
+++ b/WTP2024/appsettings.json
@@ -3,7 +3,7 @@
     "Salt": "$2a$10$3X5I5A7K.YQZW6XolhO6ce"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=PAULINA;Database=DrugsChecker;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=PAULINA;Database=1WTP2024;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
